--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-target/
-.project
+# eclipse conf file
+.settings
 .classpath
-.settings/
+.project
+.cache
+
+# idea conf files
+.idea
+*.ipr
+*.iws
+*.iml
+
+# building
+target
+build
+tmp
+dist
+
+# misc
+.DS_Store
+
+
